--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /csharp/lingoport/.vs/HelloWorld/v16/.suo
+/csharp/lingoport/.vs/HelloWorld/v16/Server/sqlite3/storage.ide-wal
+/csharp/lingoport/.vs/HelloWorld/v16/Server/sqlite3/storage.ide-shm
+/csharp/lingoport/.vs/HelloWorld/v16/Server/sqlite3/storage.ide
+/csharp/lingoport/.vs/HelloWorld/v16/Server/sqlite3/db.lock
